Sat Sep 28 00:02:21 GMT 2013  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Fix test_postingsource testcase.

Fri Sep 27 23:37:28 GMT 2013  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Fix test_allterms_iter testcase.

Fri Sep 27 23:37:01 GMT 2013  Olly Betts <olly@survex.com>

	* python3/extra.i: Fix ValueStreamIter.__next__().

Fri Sep 27 23:36:23 GMT 2013  Olly Betts <olly@survex.com>

	* python3/extra.i: Correct comments for next() changes in Python3.

Fri Sep 27 23:28:47 GMT 2013  Olly Betts <olly@survex.com>

	* python3/testsuite.py: Remove unnecessary next() helper from
	  testsuite.py.

Fri Sep 27 23:28:20 GMT 2013  Olly Betts <olly@survex.com>

	* python3/extra.i: Fix LatLongCoordsIter.__next__().

Fri Sep 27 23:14:33 GMT 2013  Olly Betts <olly@survex.com>

	* python/pythontest.py,python3/pythontest.py: Fix testcases which
	  check that non-random-access iterators which have moved on give
	  an exception if you try to use the old value - previously these
	  didn't actually test all the old values, only the last one.

Fri Sep 27 07:53:45 GMT 2013  Olly Betts <olly@survex.com>

	* python3/smoketest.py,python3/util.i: smoketest.py now passes.

Fri Sep 27 04:23:54 GMT 2013  Olly Betts <olly@survex.com>

	* python3/docs/examples/simplesearch.py,python3/python.i,
	  python3/pythontest.py,python3/smoketest.py: All methods returning
	  std::string now return 'bytes' in Python, except for
	  get_description()/__str__().  (see #346)

Wed Sep 25 02:50:39 GMT 2013  Olly Betts <olly@survex.com>

	* php/smoketest.php: Reenable the FieldProcessor subclass test for PHP
	  5.4, as this one does work.

Tue Sep 24 10:00:05 GMT 2013  Olly Betts <olly@survex.com>

	* .gitignore: Update for switch from gzip to xz.

Tue Sep 24 09:55:17 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,xapian-bindings.spec.in: Compress source tarballs with
	  xz instead of gzip.

Thu Sep 19 06:52:11 GMT 2013  Olly Betts <olly@survex.com>
